// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a mermaid reply > renders the diagram at 40 columns 1`] = `
[
  "The fold keeps a session small.",
  "",
  "\`\`\`mermaid",
  "  flowchart TB",
  "    A["read the event log"] --> B["fold",
  "settled entries"]",
  "    B --> C{"cursor moved?"}",
  "    C -->|"yes"| D["rebuild the rows"]",
  "    C -->|"no"| E["reuse the cache"]",
  "\`\`\`",
  "",
  "Settled rows are cached.",
]
`;

exports[`a mermaid reply > renders the diagram at 80 columns 1`] = `
[
  "The fold keeps a session small.",
  "",
  "          ┌────────────────────┐",
  "          │ read the event log │",
  "          └──────────┬─────────┘",
  "                     │",
  "                     ▼",
  "         ┌──────────────────────┐",
  "         │ fold settled entries │",
  "         └───────────┬──────────┘",
  "                     │",
  "                     ▼",
  "             ╔═══════════════╗",
  "             ║ cursor moved? ║",
  "             ╚═══════╤═══════╝",
  "          ┌──────────┴───────────┐",
  "          ▼yes                   ▼no",
  "┌──────────────────┐    ┌─────────────────┐",
  "│ rebuild the rows │    │ reuse the cache │",
  "└──────────────────┘    └─────────────────┘",
  "",
  "Settled rows are cached.",
]
`;

exports[`a mermaid reply > renders the diagram with its escapes 1`] = `
[
  "The fold keeps a session small.",
  "",
  "[38;2;95;175;215m          [38;2;138;138;138m┌────────────────────┐[0m[0m",
  "[38;2;95;175;215m          [38;2;138;138;138m│[0m read the event log [38;2;138;138;138m│[0m[0m",
  "[38;2;95;175;215m          [38;2;138;138;138m└──────────┬─────────┘[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m│[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m▼[0m[0m",
  "[38;2;95;175;215m         [38;2;138;138;138m┌──────────────────────┐[0m[0m",
  "[38;2;95;175;215m         [38;2;138;138;138m│[0m fold settled entries [38;2;138;138;138m│[0m[0m",
  "[38;2;95;175;215m         [38;2;138;138;138m└───────────┬──────────┘[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m│[0m[0m",
  "[38;2;95;175;215m                     [38;2;95;175;215m▼[0m[0m",
  "[38;2;95;175;215m             [38;2;138;138;138m╔═══════════════╗[0m[0m",
  "[38;2;95;175;215m             [38;2;138;138;138m║[0m cursor moved? [38;2;138;138;138m║[0m[0m",
  "[38;2;95;175;215m             [38;2;138;138;138m╚═══════╤═══════╝[0m[0m",
  "[38;2;95;175;215m          [38;2;95;175;215m┌──────────┴───────────┐[0m[0m",
  "[38;2;95;175;215m          [38;2;95;175;215m▼[0m[38;2;138;138;138myes[0m                   [38;2;95;175;215m▼[0m[38;2;138;138;138mno[0m[0m",
  "[38;2;95;175;215m[38;2;138;138;138m┌──────────────────┐[0m    [38;2;138;138;138m┌─────────────────┐[0m[0m",
  "[38;2;95;175;215m[38;2;138;138;138m│[0m rebuild the rows [38;2;138;138;138m│[0m    [38;2;138;138;138m│[0m reuse the cache [38;2;138;138;138m│[0m[0m",
  "[38;2;95;175;215m[38;2;138;138;138m└──────────────────┘[0m    [38;2;138;138;138m└─────────────────┘[0m[0m",
  "",
  "Settled rows are cached.",
]
`;

exports[`golden frames > renders a busy dock at 40 columns 1`] = `
[
  "◎ goal round 6/256 · complete the plan …",
  "⏸ plan mode · answer the plan before ed…",
  "⚇ subagents · 1 running",
  "  ▸ c000cfa3 · spawn · running 4s",
  "⛭ jobs · 1 running",
  "  ▸ bash-1 · running 12s — sleep 45 && …",
  "☰ todos · 1 left",
  "  ▸ verify the dock",
]
`;

exports[`golden frames > renders a busy dock at 80 columns 1`] = `
[
  "◎ goal round 6/256 · complete the plan for this dsh-tui plugin",
  "⏸ plan mode · answer the plan before edits happen",
  "⚇ subagents · 1 running",
  "  ▸ c000cfa3 · spawn · running 4s",
  "⛭ jobs · 1 running",
  "  ▸ bash-1 · running 12s — sleep 45 && echo bg-done",
  "☰ todos · 1 left",
  "  ▸ verify the dock",
]
`;

exports[`golden frames > renders a question gate at 40 columns 1`] = `
[
  "",
  "? which deployment target?  (1/2)",
  "    showing 1–2 of 9",
  "   ❯ [ ] 1. staging-eu-west-1 — canary",
  "            the rollout behind an audit",
  "            window",
  "     [ ] 2. production",
  "     [ ] 0. other — type your own answer",
  "   space select · digits pick · 0 answer",
  "   freely · type to filter · enter",
  "   confirm · esc skip",
]
`;

exports[`golden frames > renders a question gate at 80 columns 1`] = `
[
  "",
  "? which deployment target?  (1/2)",
  "    showing 1–2 of 9",
  "   ❯ [ ] 1. staging-eu-west-1 — canary the rollout behind an audit window",
  "     [ ] 2. production",
  "     [ ] 0. other — type your own answer",
  "   space select · digits pick · 0 answer freely · type to filter · enter confirm",
  "   · esc skip",
]
`;

exports[`golden frames > renders a question gate collecting a typed answer at 40 columns 1`] = `
[
  "",
  "? which deployment target?  (1/2)",
  "    showing 1–2 of 9",
  "     [ ] 1. staging-eu-west-1 — canary",
  "            the rollout behind an audit",
  "            window",
  "     [ ] 2. production",
  "   ❯ [x] 0. other — type your own answer",
  "   ╭───────────────────────────────────╮",
  "   │ the eu-central cluster[7m [0m           │",
  "   ╰───────────────────────────────────╯",
  "   type or paste an answer · enter",
  "   confirm · ↑↓ or esc back to options",
]
`;

exports[`golden frames > renders a question gate collecting a typed answer at 80 columns 1`] = `
[
  "",
  "? which deployment target?  (1/2)",
  "    showing 1–2 of 9",
  "     [ ] 1. staging-eu-west-1 — canary the rollout behind an audit window",
  "     [ ] 2. production",
  "   ❯ [x] 0. other — type your own answer",
  "   ╭───────────────────────────────────────────────────────────────────────────╮",
  "   │ the eu-central cluster[7m [0m                                                   │",
  "   ╰───────────────────────────────────────────────────────────────────────────╯",
  "   type or paste an answer · enter confirm · ↑↓ or esc back to options",
]
`;

exports[`golden frames > renders the dock at 40 columns 1`] = `
[
  "⏸ plan mode · answer the plan before ed…",
  "☰ todos · 2 left",
  "  ▸ verify the dock",
  "  ☐ document the dock",
]
`;

exports[`golden frames > renders the dock at 80 columns 1`] = `
[
  "⏸ plan mode · answer the plan before edits happen",
  "☰ todos · 2 left",
  "  ▸ verify the dock",
  "  ☐ document the dock",
]
`;

exports[`golden frames > renders the model picker at 40 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter switch · esc/ctrl+c cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "kimi-coding · k2 · current · effort high",
      "label": "K2",
    },
    {
      "current": false,
      "description": "opencode-go · qwen3-coder",
      "label": "Qwen3 Coder",
    },
    {
      "current": false,
      "description": "zai-coding-cn · glm-5.3",
      "label": "GLM 5.3",
    },
  ],
  "title": "model · current kimi-coding/k2 (high)",
}
`;

exports[`golden frames > renders the model picker at 80 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter switch · esc/ctrl+c cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "kimi-coding · k2 · current · effort high",
      "label": "K2",
    },
    {
      "current": false,
      "description": "opencode-go · qwen3-coder",
      "label": "Qwen3 Coder",
    },
    {
      "current": false,
      "description": "zai-coding-cn · glm-5.3",
      "label": "GLM 5.3",
    },
  ],
  "title": "model · current kimi-coding/k2 (high)",
}
`;

exports[`golden frames > renders the queued prompts at 40 columns 1`] = `
[
  "╭──────────────────────────────────────╮",
  "│ also mention the queue in the        │",
  "│ summary                              │",
  "╰──────────────────────────────────────╯",
  "╭──────────────────────────────────────╮",
  "│ and keep the README sentence short,  │",
  "│ with the same shape the bar above    │",
  "│ the editor draws                     │",
  "╰──────────────────────────────────────╯",
]
`;

exports[`golden frames > renders the queued prompts at 80 columns 1`] = `
[
  "╭──────────────────────────────────────────────────────────────────────────────╮",
  "│ also mention the queue in the summary                                        │",
  "╰──────────────────────────────────────────────────────────────────────────────╯",
  "╭──────────────────────────────────────────────────────────────────────────────╮",
  "│ and keep the README sentence short, with the same shape the bar above the    │",
  "│ editor draws                                                                 │",
  "╰──────────────────────────────────────────────────────────────────────────────╯",
]
`;

exports[`golden frames > renders the session picker at 40 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter open · esc/ctrl+c cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 4m ago · 22 events",
      "label": "dock polish",
    },
    {
      "current": false,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 15m ago · 41 events",
      "label": "tui-session-f38b6841-9229-4c2f-8c82-0ced1eee68ea",
    },
  ],
  "title": "resume a session · 2 stored",
}
`;

exports[`golden frames > renders the session picker at 80 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter open · esc/ctrl+c cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 4m ago · 22 events",
      "label": "dock polish",
    },
    {
      "current": false,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 15m ago · 41 events",
      "label": "tui-session-f38b6841-9229-4c2f-8c82-0ced1eee68ea",
    },
  ],
  "title": "resume a session · 2 stored",
}
`;

exports[`golden frames > renders the stash picker at 40 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter pop · esc/ctrl+c cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "1m ago",
      "label": "[0] refactor the fold cursor so a resume replays it",
    },
    {
      "current": false,
      "description": "10m ago",
      "label": "[1] why does the dock render twice on the first frame?",
    },
  ],
  "title": "stash · tui-session-87c1e0d2 · 2 drafts",
}
`;

exports[`golden frames > renders the stash picker at 80 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter pop · esc/ctrl+c cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "1m ago",
      "label": "[0] refactor the fold cursor so a resume replays it",
    },
    {
      "current": false,
      "description": "10m ago",
      "label": "[1] why does the dock render twice on the first frame?",
    },
  ],
  "title": "stash · tui-session-87c1e0d2 · 2 drafts",
}
`;

exports[`golden frames > renders the status row at 40 columns 1`] = `
[
  "● ready · standard · zai-coding-cn/glm-…",
]
`;

exports[`golden frames > renders the status row at 80 columns 1`] = `
[
  "● ready · standard · zai-coding-cn/glm-5.3 (max) · workspace-write · ctx 17.5k/…",
]
`;

exports[`golden frames > renders the status row with parked drafts at 80 columns 1`] = `
[
  "● ready · standard · zai-coding-cn/glm-5.3 (max) · workspace-write · stash 3 · …",
]
`;

exports[`golden frames > renders the transcript at 40 columns 1`] = `
[
  "╭──────────────────────────────────────╮",
  "│ add a dock above the editor          │",
  "╰──────────────────────────────────────╯",
  "injected dsh-agent-instructions · 3",
  "lines — <system-reminder>",
  "reasoning · 14 tokens (shift+tab)",
  "Done.",
  "",
  "- fold the work state",
  "- render it only when it says something",
  "",
  "\`\`\`ts",
  "  const dock = new WorkDock(state,",
  "theme)",
  "\`\`\`",
  "bash pnpm test · exit 0 · 1 line",
  "read src/…  L1–3 · 3 lines · 23 tok",
  "compacted 3 events (≈4200 tokens)",
]
`;

exports[`golden frames > renders the transcript at 80 columns 1`] = `
[
  "╭──────────────────────────────────────────────────────────────────────────────╮",
  "│ add a dock above the editor                                                  │",
  "╰──────────────────────────────────────────────────────────────────────────────╯",
  "injected dsh-agent-instructions · 3 lines — <system-reminder>",
  "reasoning · 14 tokens (shift+tab)",
  "Done.",
  "",
  "- fold the work state",
  "- render it only when it says something",
  "",
  "\`\`\`ts",
  "  const dock = new WorkDock(state, theme)",
  "\`\`\`",
  "bash pnpm test · exit 0 · 1 line",
  "read src/ui/view.ts  L1–3 · 3 lines · 23 tok",
  "compacted 3 events (≈4200 tokens)",
]
`;

exports[`markdown messages > renders a prompt and a thought as markdown at 40 columns 1`] = `
[
  "╭──────────────────────────────────────╮",
  "│ summarize this:                      │",
  "│                                      │",
  "│ - first item                         │",
  "│ - second item                        │",
  "│                                      │",
  "│ \`\`\`ts                                │",
  "│   const x = 1                        │",
  "│ \`\`\`                                  │",
  "╰──────────────────────────────────────╯",
  "reasoning · 15 tokens",
  "    weigh the options",
  "",
  "    1. keep the parser",
  "    2. drop the cache",
  "Kept the parser.",
]
`;

exports[`markdown messages > renders a prompt and a thought as markdown at 80 columns 1`] = `
[
  "╭──────────────────────────────────────────────────────────────────────────────╮",
  "│ summarize this:                                                              │",
  "│                                                                              │",
  "│ - first item                                                                 │",
  "│ - second item                                                                │",
  "│                                                                              │",
  "│ \`\`\`ts                                                                        │",
  "│   const x = 1                                                                │",
  "│ \`\`\`                                                                          │",
  "╰──────────────────────────────────────────────────────────────────────────────╯",
  "reasoning · 15 tokens",
  "    weigh the options",
  "",
  "    1. keep the parser",
  "    2. drop the cache",
  "Kept the parser.",
]
`;

exports[`markdown messages > renders the prompt and the thought with their escapes 1`] = `
[
  "[38;2;138;138;138m╭──────────────────────────────────────────────────────────────────────────────╮[0m",
  "[38;2;138;138;138m│[0m [38;2;39;245;200msummarize this:[0m                                                              [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m                                                                              [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m [38;2;95;175;215m- [0m[38;2;39;245;200mfirst item[0m                                                                 [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m [38;2;95;175;215m- [0m[38;2;39;245;200msecond item[0m                                                                [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m                                                                              [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m [38;2;138;138;138m\`\`\`ts[0m                                                                        [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m   const x = 1                                                                [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m [38;2;138;138;138m\`\`\`[0m                                                                          [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m╰──────────────────────────────────────────────────────────────────────────────╯[0m",
  "[3;38;2;102;102;102mreasoning · 15 tokens[0m",
  "    [38;2;102;102;102m[38;2;102;102;102mweigh[0m[0m[38;2;102;102;102m[38;2;102;102;102m the options[0m",
  "",
  "    [38;2;102;102;102m1. [0m[38;2;102;102;102mkeep the parser[0m",
  "    [38;2;102;102;102m2. [0m[38;2;102;102;102mdrop the cache[0m",
  "Kept the parser.",
]
`;

exports[`styled golden frames > renders the busy dock with its escapes 1`] = `
[
  "[1m◎ goal round 6/256 · complete the plan for this dsh-tui plugin[0m",
  "[1m⏸ plan mode · answer the plan before edits happen[0m",
  "[1m⚇ subagents · 1 running[0m",
  "[38;2;138;138;138m  ▸ c000cfa3 · spawn · running 4s[0m",
  "[1m⛭ jobs · 1 running[0m",
  "[38;2;138;138;138m  ▸ bash-1 · running 12s — sleep 45 && echo bg-done[0m",
  "[1m☰ todos · 1 left[0m",
  "[38;2;138;138;138m  ▸ verify the dock[0m",
]
`;

exports[`styled golden frames > renders the parked-draft count with its escapes 1`] = `
[
  "[38;2;138;138;138m● ready[0m[38;2;138;138;138m · [0m[38;2;138;138;138mstandard[0m[38;2;138;138;138m · [0m[38;2;138;138;138mzai-coding-cn/glm-5.3[0m[38;2;138;138;138m (max)[0m[38;2;138;138;138m · [0m[38;2;138;138;138mworkspace-write[0m[38;2;138;138;138m · [0m[38;2;95;175;215mstash 3[0m[38;2;138;138;138m · [0m[38;2;138;138;138m[0m…[0m[0m",
]
`;

exports[`styled golden frames > renders the queued prompts with their escapes 1`] = `
[
  "[38;2;138;138;138m╭──────────────────────────────────────────────────────────────────────────────╮[0m",
  "[38;2;138;138;138m│[0m [2;3malso mention the queue in the summary[0m                                        [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m╰──────────────────────────────────────────────────────────────────────────────╯[0m",
  "[38;2;138;138;138m╭──────────────────────────────────────────────────────────────────────────────╮[0m",
  "[38;2;138;138;138m│[0m [2;3mand keep the README sentence short, with the same shape the bar above the[0m    [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m│[0m [2;3meditor draws[0m                                                                 [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m╰──────────────────────────────────────────────────────────────────────────────╯[0m",
]
`;

exports[`styled golden frames > renders the status row with its escapes 1`] = `
[
  "[38;2;138;138;138m● ready[0m[38;2;138;138;138m · [0m[38;2;138;138;138mstandard[0m[38;2;138;138;138m · [0m[38;2;138;138;138mzai-coding-cn/glm-5.3[0m[38;2;138;138;138m (max)[0m[38;2;138;138;138m · [0m[38;2;138;138;138mworkspace-write[0m[38;2;138;138;138m · [0m[38;2;138;138;138mctx 17.5k/[0m…[0m[0m",
]
`;

exports[`styled golden frames > renders the transcript with its escapes 1`] = `
[
  "[38;2;138;138;138m╭──────────────────────────────────────────────────────────────────────────────╮[0m",
  "[38;2;138;138;138m│[0m [38;2;39;245;200madd a dock above the editor[0m                                                  [38;2;138;138;138m│[0m",
  "[38;2;138;138;138m╰──────────────────────────────────────────────────────────────────────────────╯[0m",
  "[38;2;138;138;138minjected dsh-agent-instructions · 3 lines — <system-reminder>[0m",
  "[3;38;2;102;102;102mreasoning · 14 tokens[0m[3;38;2;102;102;102m (shift+tab)[0m",
  "Done.",
  "",
  "[38;2;95;175;215m- [0mfold the work state",
  "[38;2;95;175;215m- [0mrender it only when it says something",
  "",
  "[38;2;138;138;138m\`\`\`ts[0m",
  "  const dock = new WorkDock(state, theme)",
  "[38;2;138;138;138m\`\`\`[0m",
  "[38;2;215;175;95mbash[0m [38;2;141;179;217mpnpm test[0m[38;2;138;138;138m · [0m[38;2;138;138;138mexit 0[0m[38;2;138;138;138m · [0m[38;2;138;138;138m1 line[0m",
  "[38;2;215;175;95mread[0m [38;2;141;179;217msrc/ui/view.ts[0m  [38;2;138;138;138mL1–3[0m[38;2;138;138;138m · [0m[38;2;138;138;138m3 lines[0m[38;2;138;138;138m · [0m[38;2;138;138;138m23 tok[0m",
  "[38;2;138;138;138mcompacted 3 events (≈4200 tokens)[0m",
]
`;
